--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2da8d">  <td>21/06/07 00:09:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.setUpCucumber()[pri:0, instance:MyRunner.TestRunner@21ba0741]">&gt;&gt;setUpCucumber</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1677458155</td>   <td></td> </tr>
-<tr bgcolor="d2da8d">  <td>21/06/07 00:09:43</td>   <td>370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@21ba0741]">feature</td> 
-  <td>main@1677458155</td>   <td></td> </tr>
-<tr bgcolor="d2da8d">  <td>21/06/07 00:10:26</td>   <td>43661</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClass()[pri:0, instance:MyRunner.TestRunner@21ba0741]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1677458155</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>21/06/08 12:35:12</td>   <td>0</td> <td title="&gt;&gt;TestRunner.create()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&gt;&gt;create</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>21/06/08 12:35:12</td>   <td>138</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.setUpCucumber()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&gt;&gt;setUpCucumber</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>21/06/08 12:35:12</td>   <td>323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@1f3f4916]">feature</td> 
+  <td>main@215219944</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>21/06/08 12:35:32</td>   <td>20050</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClass()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
 </table>
