--- a/Spark.html
+++ b/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 8, 2021 12:35:12 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 8, 2021 08:07:21 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Size sort</p>
+            <p class="name">User is unable to add any out of stock limited edition color to cart</p>
             <p class="text-sm">
-              <span>12:35:12 PM</span> / <span>00:00:18:510</span>
+              <span>8:07:21 PM</span> / <span>00:00:19:657</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Size sort</h5>
-<span class='badge badge-success'>06.08.2021 12:35:12 PM</span>
-<span class='badge badge-danger'>06.08.2021 12:35:31 PM</span>
-<span class='badge badge-default'>00:00:18:510</span>
+<h5 class="test-status text-fail">User is unable to add any out of stock limited edition color to cart</h5>
+<span class='badge badge-success'>06.08.2021 8:07:21 PM</span>
+<span class='badge badge-danger'>06.08.2021 8:07:41 PM</span>
+<span class='badge badge-default'>00:00:19:657</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,16 +104,173 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:35:31 PM</td>
+        <td>8:07:37 PM</td>
         <td>
-          1,2,3,4,5,6,6+,7+,8+,7,8
+          the colour is : Default
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:38 PM</td>
+        <td>
+          the size is : 1
+Fits 32A, 34A, 32B
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:38 PM</td>
+        <td>
+          the size is : 2
+Fits 36A, 34B, 32C
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>12:35:31 PM</td>
+        <td>8:07:38 PM</td>
         <td>
-          failed
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          the size is : 3
+Fits 36B, 38B, 36C
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          the size is : 4
+Fits 34C, 32D, 34D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          the size is : 5
+Fits 38C, 40C, 36D, 38D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:39 PM</td>
+        <td>
+          the size is : 6
+Fits 32DD, 34DD, 32E, 34E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          the size is : 6+
+Fits 32F, 34F, 32G, 34G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          the size is : 7+
+Fits 36F, 38F, 36G, 38G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          the size is : 8+
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:40 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:41 PM</td>
+        <td>
+          the size is : 7
+Fits 36DD, 38DD, 36E, 38E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:41 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:41 PM</td>
+        <td>
+          the size is : 8
+Fits 40D, 42D, 40DD, 42DD, 40E, 42E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:07:41 PM</td>
+        <td>
+          <b>the Default button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>8:07:41 PM</td>
+        <td>
+          the colour is : Slate Grey
         </td>
       </tr>
   </tbody>
@@ -135,13 +292,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 8, 2021 12:35:12 PM</h3>
+<h3>Jun 8, 2021 08:07:21 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 8, 2021 12:35:31 PM</h3>
+<h3>Jun 8, 2021 08:07:41 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -194,8 +351,8 @@
 <div class="card-footer">
 <div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 <div>
-<small data-tooltip='50%'><b>1</b> events failed,
-<b data-tooltip='%'>1</b> others
+<small data-tooltip='43%'><b>10</b> events failed,
+<b data-tooltip='%'>13</b> others
 </small>
 </div>
 </div>
@@ -211,7 +368,7 @@
 </div></div>
 <script>
 var timeline = {
-"Size sort":18.51
+"User is unable to add any out of stock limited edition color to cart":19.657
 };
 </script>
 <div class="row">
@@ -238,10 +395,10 @@ skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
 passEvents: 0,
-failEvents: 1,
+failEvents: 10,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 1
+infoEvents: 13
 };
 </script>        </div>
       </div>
