new files added

--- a/Spark.html
+++ b/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 8, 2021 08:07:21 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 8, 2021 09:41:16 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">User is unable to add any out of stock limited edition color to cart</p>
             <p class="text-sm">
-              <span>8:07:21 PM</span> / <span>00:00:19:657</span>
+              <span>9:41:16 PM</span> / <span>00:00:35:310</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">User is unable to add any out of stock limited edition color to cart</h5>
-<span class='badge badge-success'>06.08.2021 8:07:21 PM</span>
-<span class='badge badge-danger'>06.08.2021 8:07:41 PM</span>
-<span class='badge badge-default'>00:00:19:657</span>
+<span class='badge badge-success'>06.08.2021 9:41:16 PM</span>
+<span class='badge badge-danger'>06.08.2021 9:41:52 PM</span>
+<span class='badge badge-default'>00:00:35:310</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,14 +104,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:37 PM</td>
+        <td>9:41:31 PM</td>
         <td>
           the colour is : Default
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:38 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           the size is : 1
 Fits 32A, 34A, 32B
@@ -119,7 +119,7 @@ Fits 32A, 34A, 32B
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:38 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           the size is : 2
 Fits 36A, 34B, 32C
@@ -127,14 +127,14 @@ Fits 36A, 34B, 32C
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:38 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           the size is : 3
 Fits 36B, 38B, 36C
@@ -142,14 +142,14 @@ Fits 36B, 38B, 36C
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           the size is : 4
 Fits 34C, 32D, 34D
@@ -157,14 +157,14 @@ Fits 34C, 32D, 34D
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           the size is : 5
 Fits 38C, 40C, 36D, 38D
@@ -172,14 +172,14 @@ Fits 38C, 40C, 36D, 38D
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:32 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:39 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           the size is : 6
 Fits 32DD, 34DD, 32E, 34E
@@ -187,14 +187,14 @@ Fits 32DD, 34DD, 32E, 34E
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           the size is : 6+
 Fits 32F, 34F, 32G, 34G
@@ -202,14 +202,14 @@ Fits 32F, 34F, 32G, 34G
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           the size is : 7+
 Fits 36F, 38F, 36G, 38G
@@ -217,28 +217,28 @@ Fits 36F, 38F, 36G, 38G
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           the size is : 8+
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:40 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:41 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           the size is : 7
 Fits 36DD, 38DD, 36E, 38E
@@ -246,14 +246,14 @@ Fits 36DD, 38DD, 36E, 38E
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:41 PM</td>
+        <td>9:41:33 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:41 PM</td>
+        <td>9:41:34 PM</td>
         <td>
           the size is : 8
 Fits 40D, 42D, 40DD, 42DD, 40E, 42E
@@ -261,16 +261,274 @@ Fits 40D, 42D, 40DD, 42DD, 40E, 42E
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:07:41 PM</td>
+        <td>9:41:34 PM</td>
         <td>
           <b>the Default button is enabled</b>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:07:41 PM</td>
+        <td>9:41:34 PM</td>
         <td>
           the colour is : Slate Grey
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:34 PM</td>
+        <td>
+          the size is : 1
+Fits 32A, 34A, 32B
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>9:41:34 PM</td>
+        <td>
+          <b>the Slate Grey button is enabled</b>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:34 PM</td>
+        <td>
+          the size is : 2
+Fits 36A, 34B, 32C
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:34 PM</td>
+        <td>
+          the size is : 3
+Fits 36B, 38B, 36C
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:34 PM</td>
+        <td>
+          the size is : 4
+Fits 34C, 32D, 34D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:35 PM</td>
+        <td>
+          the size is : 5
+Fits 38C, 40C, 36D, 38D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:35 PM</td>
+        <td>
+          the size is : 6
+Fits 32DD, 34DD, 32E, 34E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:35 PM</td>
+        <td>
+          the size is : 6+
+Fits 32F, 34F, 32G, 34G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:35 PM</td>
+        <td>
+          the size is : 7+
+Fits 36F, 38F, 36G, 38G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:35 PM</td>
+        <td>
+          the size is : 8+
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:36 PM</td>
+        <td>
+          the size is : 7
+Fits 36DD, 38DD, 36E, 38E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:36 PM</td>
+        <td>
+          the size is : 8
+Fits 40D, 42D, 40DD, 42DD, 40E, 42E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:36 PM</td>
+        <td>
+          the colour is : Amethyst
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:36 PM</td>
+        <td>
+          the size is : 1
+Fits 32A, 34A, 32B
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:36 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the size is : 2
+Fits 36A, 34B, 32C
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the size is : 3
+Fits 36B, 38B, 36C
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the size is : 4
+Fits 34C, 32D, 34D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:37 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the size is : 5
+Fits 38C, 40C, 36D, 38D
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the size is : 6
+Fits 32DD, 34DD, 32E, 34E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the size is : 6+
+Fits 32F, 34F, 32G, 34G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:38 PM</td>
+        <td>
+          the size is : 7+
+Fits 36F, 38F, 36G, 38G
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:39 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:39 PM</td>
+        <td>
+          the size is : 8+
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:39 PM</td>
+        <td>
+          the Amethyst button is disabled
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:39 PM</td>
+        <td>
+          the size is : 7
+Fits 36DD, 38DD, 36E, 38E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:41:52 PM</td>
+        <td>
+          the size is : 8
+Fits 40D, 42D, 40DD, 42DD, 40E, 42E
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:41:52 PM</td>
+        <td>
+          the Amethyst button is disabled
         </td>
       </tr>
   </tbody>
@@ -292,13 +550,13 @@ Fits 40D, 42D, 40DD, 42DD, 40E, 42E
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 8, 2021 08:07:21 PM</h3>
+<h3>Jun 8, 2021 09:41:16 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 8, 2021 08:07:41 PM</h3>
+<h3>Jun 8, 2021 09:41:52 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -349,10 +607,10 @@ Fits 40D, 42D, 40DD, 42DD, 40E, 42E
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'><b>0</b> events passed</small></div>
+<div><small data-tooltip='17%'><b>10</b> events passed</small></div>
 <div>
-<small data-tooltip='43%'><b>10</b> events failed,
-<b data-tooltip='%'>13</b> others
+<small data-tooltip='19%'><b>11</b> events failed,
+<b data-tooltip='%'>36</b> others
 </small>
 </div>
 </div>
@@ -368,7 +626,7 @@ Fits 40D, 42D, 40DD, 42DD, 40E, 42E
 </div></div>
 <script>
 var timeline = {
-"User is unable to add any out of stock limited edition color to cart":19.657
+"User is unable to add any out of stock limited edition color to cart":35.31
 };
 </script>
 <div class="row">
@@ -394,11 +652,11 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 0,
-failEvents: 10,
+passEvents: 10,
+failEvents: 11,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 13
+infoEvents: 36
 };
 </script>        </div>
       </div>
