--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">36,171</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">181,911</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">MyRunner.TestRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1623202876819</td><td rowspan="1">35982</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">MyRunner.TestRunner</td><td><a href="#m0">feature</a></td><td rowspan="5">1623286158692</td><td rowspan="5">21162</td></tr><tr class="passedeven"><td><a href="#m1">feature</a></td></tr><tr class="passedeven"><td><a href="#m2">feature</a></td></tr><tr class="passedeven"><td><a href="#m3">feature</a></td></tr><tr class="passedeven"><td><a href="#m4">feature</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Out Of Stock check</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Select size check</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Add to Bag</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Out Of Stock check</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Size sort</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">MyRunner.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Size shown below image</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
