--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="db82ae">  <td>21/06/08 21:41:16</td>   <td>0</td> <td title="&gt;&gt;TestRunner.create()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&gt;&gt;create</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
-<tr bgcolor="db82ae">  <td>21/06/08 21:41:16</td>   <td>318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@1f3f4916]">feature</td> 
-  <td>main@215219944</td>   <td></td> </tr>
-<tr bgcolor="db82ae">  <td>21/06/08 21:41:16</td>   <td>139</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.setUpCucumber()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&gt;&gt;setUpCucumber</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
-<tr bgcolor="db82ae">  <td>21/06/08 21:41:52</td>   <td>36303</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClass()[pri:0, instance:MyRunner.TestRunner@1f3f4916]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@215219944</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:47:26</td>   <td>0</td> <td title="&gt;&gt;TestRunner.create()[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">&gt;&gt;create</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:47:27</td>   <td>328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">feature</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:47:46</td>   <td>19347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">feature</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:49:18</td>   <td>111735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">feature</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:49:39</td>   <td>132898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">feature</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:50:09</td>   <td>162067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">feature</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:47:27</td>   <td>150</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.setUpCucumber()[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">&gt;&gt;setUpCucumber</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>21/06/09 20:50:29</td>   <td>182053</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClass()[pri:0, instance:MyRunner.TestRunner@4b5a5ed1]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
 </table>
