added all files

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\mnprt\AppData\Local\Temp\testng-eclipse-2067604409\testng-customsuite.xml</span>
+                    <span>C:\Users\mnprt\AppData\Local\Temp\testng-eclipse-1943367667\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="MyRunner.TestRunner" hash-for-method="feature(Select size check)">feature(Select size check)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="MyRunner.TestRunner" hash-for-method="feature(Add to Bag)">feature(Add to Bag)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="MyRunner.TestRunner" hash-for-method="feature(Out Of Stock check)">feature(Out Of Stock check)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="MyRunner.TestRunner" hash-for-method="feature(Size sort)">feature(Size sort)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="MyRunner.TestRunner" hash-for-method="feature(Size shown below image)">feature(Size shown below image)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -145,50 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="feature(Select size check)">
-                  </a> <!-- feature(Select size check) -->
-                  <span class="method-name">feature</span>
-                  <span class="parameters">(Select size check)</span>
-                  <em>
-(Runs Cucumber Feature)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="feature(Add to Bag)">
-                  </a> <!-- feature(Add to Bag) -->
-                  <span class="method-name">feature</span>
-                  <span class="parameters">(Add to Bag)</span>
-                  <em>
-(Runs Cucumber Feature)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="feature(Out Of Stock check)">
                   </a> <!-- feature(Out Of Stock check) -->
                   <span class="method-name">feature</span>
                   <span class="parameters">(Out Of Stock check)</span>
-                  <em>
-(Runs Cucumber Feature)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="feature(Size sort)">
-                  </a> <!-- feature(Size sort) -->
-                  <span class="method-name">feature</span>
-                  <span class="parameters">(Size sort)</span>
-                  <em>
-(Runs Cucumber Feature)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="feature(Size shown below image)">
-                  </a> <!-- feature(Size shown below image) -->
-                  <span class="method-name">feature</span>
-                  <span class="parameters">(Size shown below image)</span>
                   <em>
 (Runs Cucumber Feature)                  </em>
                 </div> <!-- method-content -->
@@ -198,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mnprt\AppData\Local\Temp\testng-eclipse-2067604409\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mnprt\AppData\Local\Temp\testng-eclipse-1943367667\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -255,32 +195,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'MyRunner.TestRunner')
-data.setCell(0, 3, 92386);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'feature')
-data.setCell(1, 2, 'MyRunner.TestRunner')
-data.setCell(1, 3, 29168);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'feature')
-data.setCell(2, 2, 'MyRunner.TestRunner')
-data.setCell(2, 3, 21162);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'feature')
-data.setCell(3, 2, 'MyRunner.TestRunner')
-data.setCell(3, 3, 19984);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'feature')
-data.setCell(4, 2, 'MyRunner.TestRunner')
-data.setCell(4, 3, 19017);
+data.setCell(0, 3, 94373);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -313,31 +237,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setUpCucumber</span>
-                <span class="method-start">154 ms</span>
+                <span class="method-start">153 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">feature(Add to Bag)</span>
-                <span class="method-start">332 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">feature(Out Of Stock check)</span>
-                <span class="method-start">19351 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">feature(Select size check)</span>
-                <span class="method-start">111739 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">feature(Size shown below image)</span>
-                <span class="method-start">132902 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">feature(Size sort)</span>
-                <span class="method-start">162071 ms</span>
+                <span class="method-start">341 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">182056 ms</span>
+                <span class="method-start">94717 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
